--- a/README.textile
+++ b/README.textile
@@ -30,7 +30,7 @@ Elasticsearch is a distributed RESTful search engine built for the cloud. Featur
 
 h2. Getting Started
 
-First of all, DON'T PANIC. It will take 5 minutes to get the gist of what Elasticsearch is all about.
+Learn more by installing Elasticsearch and using it.
 
 h3. Requirements
 
